--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Khmer:wght@100..900&family=Noto+Serif+Khmer:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <script defer src="js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -22,7 +27,7 @@
                             style="opacity: 1;">
 
                             <!-- Title -->
-                            <p class="fw-bold fs-4" style="color: #C7A754;">សិរីមង្គលអាពាហ៍ពិពាហ៍</p>
+                            <p class="fw-semibold fs-4" style="color: #C7A754;">សិរីមង្គលអាពាហ៍ពិពាហ៍</p>
 
                             <!-- Logo -->
                             <div class="z-3">
@@ -33,7 +38,7 @@
                             </div>
 
                             <!-- Groom & Bride Names -->
-                            <div class="d-flex justify-content-between align-items-center w-100 px-3 py-3 fw-bold"
+                            <div class="d-flex justify-content-between align-items-center w-100 px-3 py-3 fw-semibold"
                                 style="max-width: 300px; font-size: 1rem;">
                                 <div class="d-flex flex-column align-items-center text-center">
                                     <p class="text-xs mb-1 fw-light" style="color: #C7A754;">កូនប្រុសនាម</p>
@@ -55,7 +60,7 @@
                             <!-- Event Date -->
                             <div class="text-center">
                                 <p class="text-uppercase fs-6" style="color: #C7A754;">ដែលនឹងប្រព្រឹត្តទៅនៅ</p>
-                                <div class="fw-bold">
+                                <div class="fw-semibold">
                                     <div class="text-center text-2xl text-uppercase"
                                         style="font-size: 1.5rem; color: #C7A754;">
                                         ថ្ងៃអាទិត្យ ទី២៨&ZeroWidthSpace; ខែមករា <br>
@@ -66,7 +71,7 @@
 
                             <!-- Scroll down hint -->
                             <a href="#gallery1st"
-                                class="scroll-hint position-absolute bottom-0 start-50 translate-middle-x fw-bold d-flex flex-column justify-content-center align-items-center mb-3 opacity-0 text-decoration-none"
+                                class="scroll-hint position-absolute bottom-0 start-50 translate-middle-x fw-semibold d-flex flex-column justify-content-center align-items-center mb-3 opacity-0 text-decoration-none"
                                 style="color: #C7A754; transition: all 0.8s;">
                                 <div class="mb-1">ទាញចុះក្រោម</div>
                                 <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -108,7 +113,7 @@
                     <div class="d-flex flex-column w-100 h-100">
                         <div class="mt-5 mb-5 px-4" style="color: #C7A754;">
                             <!-- Parents -->
-                            <div class="d-flex justify-content-between fw-bold mx-auto mt-4 mb-4"
+                            <div class="d-flex justify-content-between .fw-semibold mx-auto mt-4 mb-4"
                                 style="max-width: 640px; gap: 0.5rem;">
                                 <div class="flex-fill text-start small">
                                     លោក កៅ វណ្ណារិន<br>
@@ -120,7 +125,7 @@
                                 </div>
                             </div>
                             <!-- Title -->
-                            <div class="text-center fw-bold mb-4" style="font-size: 1.5rem;">
+                            <div class="text-center fw-semibold mb-4" style="font-size: 1.5rem;">
                                 មានកិត្តិយសសូមគោរពអញ្ជើញ
                             </div>
 
@@ -133,7 +138,7 @@
                             </div>
 
                             <!-- Logo and Names -->
-                            <div class="position-relative fw-bold mt-4">
+                            <div class="position-relative fw-semibold mt-4">
 
                                 <!-- Logo -->
                                 <div class="text-center">
@@ -170,7 +175,7 @@
                             </div>
 
                             <!-- Ceremony Date -->
-                            <div class="fw-bold text-center mt-3 text-uppercase" style="font-size: 1.5rem;">
+                            <div class="fw-semibold text-center mt-3 text-uppercase" style="font-size: 1.5rem;">
                                 ថ្ងៃអាទិត្យ ទី២៨ ខែមករា<br>
                                 <span style="font-size: 2rem;">ឆ្នាំ២០២៤</span>
                             </div>
@@ -186,7 +191,7 @@
                                         style="z-index: 1; object-fit: cover;">
 
                                     <!-- Text centered on top -->
-                                    <span class="position-relative text-uppercase fw-bold"
+                                    <span class="position-relative text-uppercase fw-semibold"
                                         style="padding-top: 4px; padding-bottom: 4px;line-height: 1.2;font-size: 0.9rem;color: #C7A754">
                                         កត់ទុកក្នុងប្រតិទិន
                                     </span>
@@ -201,14 +206,14 @@
                     <div class="d-flex flex-column w-100 h-100">
                         <div class="px-4 mt-5">
                             <!-- Section Title -->
-                            <div class="position-relative text-center fw-bold py-4"
+                            <div class="position-relative text-center fw-semibold py-4"
                                 style="color: #C7A754; font-size: 1.5rem;">
                                 កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍
                             </div>
                             <div class="px-4 text-center" style="font-size: 1rem; color: #C7A754;">
                                 <!-- Morning Agenda -->
                                 <div>
-                                    <h2 class="fw-bold mb-4" style="font-size: 1.25rem;">
+                                    <h2 class="fw-semibold mb-4" style="font-size: 1.25rem;">
                                         កម្មវិធីពេលព្រឹក
                                     </h2>
                                     <!-- Event 1 -->
@@ -283,7 +288,7 @@
                                 </div>
                                 <!-- Evening Agenda -->
                                 <div>
-                                    <h2 class="fw-bold my-4" style="font-size: 1.25rem;">
+                                    <h2 class="fw-semibold my-4" style="font-size: 1.25rem;">
                                         កម្មវិធីពេលល្ងាច</h2>
 
                                     <!-- Evening Event -->
@@ -307,7 +312,8 @@
                     <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100"
                         style="max-width: 640px; color: #C7A754; margin-top: 100px;">
 
-                        <div class="text-center text-warning fw-bold py-4" style="font-size: 1.5rem; color: #C7A754;">
+                        <div class="text-center text-warning fw-semibold py-4"
+                            style="font-size: 1.5rem; color: #C7A754;">
                             វិចិត្រសាល
                         </div>
                         <div class="images">
@@ -360,7 +366,7 @@
                         <div class="d-flex flex-column justify-content-center align-items-center min-vh-100">
 
                             <!-- Title -->
-                            <div class="text-center fw-bold mb-2" style="color: #C7A754; font-size: 1.5rem;">
+                            <div class="text-center fw-semibold mb-2" style="color: #C7A754; font-size: 1.5rem;">
                                 ទីតាំង
                             </div>
 
@@ -409,7 +415,7 @@
                                     style="z-index: 1; object-fit: cover;">
 
                                 <!-- Text centered on top -->
-                                <span class="position-relative text-uppercase fw-bold "
+                                <span class="position-relative text-uppercase fw-semibold "
                                     style="padding-top: 4px; padding-bottom: 4px;line-height: 1.2;font-size: 0.9rem;color: #C7A754">
                                     បើកផែនទី
                                 </span>
@@ -422,7 +428,7 @@
                         <div class="d-flex flex-column justify-content-center align-items-center ">
 
                             <!-- Title -->
-                            <div class="text-center fw-bold " style="color: #C7A754; font-size: 1.5rem;">
+                            <div class="text-center fw-semibold " style="color: #C7A754; font-size: 1.5rem;">
                                 ចំណងដៃ
                             </div>
 
@@ -459,7 +465,7 @@
                                     style="z-index: 1; object-fit: cover;">
 
                                 <!-- Text centered on top -->
-                                <span class="position-relative text-uppercase fw-bold"
+                                <span class="position-relative text-uppercase fw-semibold"
                                     style="padding-top: 4px; padding-bottom: 4px;line-height: 1.2;font-size: 0.9rem;color: #C7A754">
                                     ចុចដើម្បីចង់ចំណងដៃ
                                 </span>
