--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <div class="d-flex justify-content-between align-items-center w-100 px-3 py-3 fw-semibold"
                                 style="max-width: 300px; font-size: 1rem;">
                                 <div class="d-flex flex-column align-items-center text-center">
-                                    <p class="text-xs mb-1 fw-light" style="color: #C7A754;">កូនប្រុសនាម</p>
+                                    <p class="text-xs mb-1 fw-medium" style="color: #C7A754;">កូនប្រុសនាម</p>
                                     <div class="d-flex flex-column-reverse">
                                         <p class="mb-0 text-nowrap" style="color: #C7A754;">ពិសាល&ZeroWidthSpace; នីកូឡា
                                         </p>
@@ -49,7 +49,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex flex-column align-items-center text-center">
-                                    <p class="text-xs mb-1 fw-light" style="color: #C7A754;">កូនស្រីនាម</p>
+                                    <p class="text-xs mb-1 fw-medium" style="color: #C7A754;">កូនស្រីនាម</p>
                                     <div class="d-flex flex-column-reverse">
                                         <p class="mb-0 text-nowrap" style="color: #C7A754;">រ័ត្នវីរីយ៉ា</p>
                                         <p class="mb-0" style="color: #C7A754;">វុឌ្ឍី</p>
@@ -59,7 +59,8 @@
 
                             <!-- Event Date -->
                             <div class="text-center">
-                                <p class="text-uppercase fs-6" style="color: #C7A754;">ដែលនឹងប្រព្រឹត្តទៅនៅ</p>
+                                <p class="text-uppercase fs-6 fw-medium" style="color: #C7A754;">ដែលនឹងប្រព្រឹត្តទៅនៅ
+                                </p>
                                 <div class="fw-semibold">
                                     <div class="text-center text-2xl text-uppercase"
                                         style="font-size: 1.5rem; color: #C7A754;">
@@ -113,7 +114,7 @@
                     <div class="d-flex flex-column w-100 h-100">
                         <div class="mt-5 mb-5 px-4" style="color: #C7A754;">
                             <!-- Parents -->
-                            <div class="d-flex justify-content-between .fw-semibold mx-auto mt-4 mb-4"
+                            <div class="d-flex justify-content-between fw-semibold mx-auto mt-4 mb-4"
                                 style="max-width: 640px; gap: 0.5rem;">
                                 <div class="flex-fill text-start small">
                                     លោក កៅ វណ្ណារិន<br>
@@ -210,7 +211,7 @@
                                 style="color: #C7A754; font-size: 1.5rem;">
                                 កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍
                             </div>
-                            <div class="px-4 text-center" style="font-size: 1rem; color: #C7A754;">
+                            <div class="px-4 text-center fw-medium" style="font-size: 1rem; color: #C7A754;">
                                 <!-- Morning Agenda -->
                                 <div>
                                     <h2 class="fw-semibold mb-4" style="font-size: 1.25rem;">
@@ -311,11 +312,6 @@
                 <section id="gallery" class="position-relative">
                     <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100"
                         style="max-width: 640px; color: #C7A754; margin-top: 100px;">
-
-                        <div class="text-center text-warning fw-semibold py-4"
-                            style="font-size: 1.5rem; color: #C7A754;">
-                            វិចិត្រសាល
-                        </div>
                         <div class="images">
                             <!-- Image Gallery -->
                             <!-- First Row: Single Large Image -->
