--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Background Audio -->
     <audio id="backgroundAudio" autoplay loop muted>
-        <source src="Eed-sheeran-perfect-instrumentalfx.mp3" />
+        <source src="background_instrument.mp3" />
     </audio>
     <!-- Background Image -->
     <img src="images/background.png" alt="background"
