make first page and popup page , generator link for invite guest

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="text-center mt-5">
                 <h1 class="fw-semibold fs-4" style="color: #C7A754;">សិរីមង្គលអាពាហ៍ពិពាហ៍</h1>
                 <p class="fw-semibold fs-4" style="color: #C7A754;">សូមគោរពអញ្ចើញ</p>
-                <h2 id="guestName" id="text-box">Guest</h2>
+                <h2 id="guestName">Guest</h2>
 
             </div>
             <!-- Open Button -->
