make first page and popup page , generator link for invite guest

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
                         <!-- Scroll down hint -->
                         <a href="#gallery1st"
-                            class="scroll-hint position-absolute bottom-0 start-50 translate-middle-x fw-semibold d-flex flex-column justify-content-center align-items-center mb-3 opacity-0 text-decoration-none"
+                            class="scroll-hint position-absolute bottom-0 start-50 translate-middle-x fw-semibold d-flex  justify-content-center align-items-center mb-3 opacity-0 text-decoration-none"
                             style="color: #C7A754; transition: all 0.8s;">
-                            <div class="mb-1">ទាញចុះក្រោម</div>
+                            <div class="mb-1 arrow-icon">ទាញចុះក្រោម</div>
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 fill="#C7A754" viewBox="0 0 24 24">
                                 <path d="M12 16.5l-8-8 1.4-1.4L12 13.7l6.6-6.6L20 8.5z" />
