make first page and popup page , generator link for invite guest

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <main id="scrollable-page" class="position-relative min-vh-100">
         <div class="d-flex flex-column w-100 min-vh-100">
             <section id="home" class="position-relative slide-in">
-                <div class="d-flex flex-column vh-100 justify-content-center align-items-center text-uppercase"
+                <div class="d-flex flex-column w-100 min-vh-100 justify-content-center align-items-center text-uppercase"
                     style="opacity: 1;">
 
                     <!-- Title -->
@@ -117,20 +117,8 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Scroll down hint 
-                        <a href="#gallery1st"
-                            class="scroll-hint position-absolute bottom-0 start-50 translate-middle-x fw-semibold d-flex  justify-content-center align-items-center mb-3 opacity-0 text-decoration-none"
-                            style="color: #C7A754; transition: all 0.8s;">
-                            <div class="mb-1 arrow-icon">ទាញចុះក្រោម</div>
-                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                fill="#C7A754" viewBox="0 0 24 24">
-                                <path d="M12 16.5l-8-8 1.4-1.4L12 13.7l6.6-6.6L20 8.5z" />
-                            </svg>
-                        </a>
-                         -->
                     <div class="position-absolute w-100  fw-bold d-flex justify-content-center arrow-icon"
-                        style="bottom: 0.25rem; font-size: 1rem; color: #C7A754; ">
+                        style="bottom: 2rem; font-size: 1rem; color: #C7A754; ">
                         ទាញចុះក្រោម
                         <svg class="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#C7A754"
                             viewBox="0 0 24 24">
