make first page and popup page , generator link for invite guest

--- a/index.html
+++ b/index.html
@@ -70,62 +70,64 @@
     <main id="scrollable-page" class="position-relative min-vh-100">
         <div class="d-flex flex-column w-100 min-vh-100">
             <section id="home" class="position-relative slide-in">
-                <div class="d-flex flex-column w-100 min-vh-100 justify-content-center align-items-center text-uppercase"
-                    style="opacity: 1;">
+                <div class="d-flex flex-column w-100 min-h-screen-s">
+                    <div class="d-flex flex-column min-h-screen-s justify-content-center align-items-center text-2xl"
+                        style="opacity: 1;">
 
-                    <!-- Title -->
-                    <p class="fw-semibold fs-4 mb-0" style="color: #C7A754;">សិរីមង្គលអាពាហ៍ពិពាហ៍</p>
+                        <!-- Title -->
+                        <p class="fw-semibold fs-4 mb-0" style="color: #C7A754;">សិរីមង្គលអាពាហ៍ពិពាហ៍</p>
 
-                    <!-- Logo -->
-                    <div class="z-3">
-                        <img alt="logo" loading="lazy" width="204" height="278" decoding="async"
-                            srcset="https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/logo.png?tr=w-256 1x, https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/logo.png?tr=w-640 2x"
-                            src="https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/logo.png?tr=w-640"
-                            class="img-fluid" style="color: transparent;">
-                    </div>
+                        <!-- Logo -->
+                        <div class="z-3">
+                            <img alt="logo" loading="lazy" width="204" height="278" decoding="async"
+                                srcset="https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/logo.png?tr=w-256 1x, https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/logo.png?tr=w-640 2x"
+                                src="https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/logo.png?tr=w-640"
+                                class="img-fluid" style="color: transparent;">
+                        </div>
 
-                    <!-- Groom & Bride Names -->
-                    <div class="d-flex justify-content-between align-items-center w-100 px-3 py-3 fw-semibold"
-                        style="max-width: 300px; font-size: 1rem;">
-                        <div class="d-flex flex-column align-items-center text-center">
-                            <p class="text-xs mb-1 fw-medium" style="color: #C7A754;">កូនប្រុសនាម</p>
-                            <div class="d-flex flex-column-reverse">
-                                <p class="mb-0 text-nowrap" style="color: #C7A754;">
-                                    ពិសាល&ZeroWidthSpace; នីកូឡា
-                                </p>
-                                <p class="mb-0" style="color: #C7A754;">កៅ</p>
+                        <!-- Groom & Bride Names -->
+                        <div class="d-flex justify-content-between align-items-center w-100 px-3 py-3 fw-semibold"
+                            style="max-width: 300px; font-size: 1rem;">
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <p class="text-xs mb-1 fw-medium" style="color: #C7A754;">កូនប្រុសនាម</p>
+                                <div class="d-flex flex-column-reverse">
+                                    <p class="mb-0 text-nowrap" style="color: #C7A754;">
+                                        ពិសាល&ZeroWidthSpace; នីកូឡា
+                                    </p>
+                                    <p class="mb-0" style="color: #C7A754;">កៅ</p>
+                                </div>
+                            </div>
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <p class="text-xs mb-1 fw-medium" style="color: #C7A754;">កូនស្រីនាម</p>
+                                <div class="d-flex flex-column-reverse">
+                                    <p class="mb-0 text-nowrap" style="color: #C7A754;">រ័ត្នវីរីយ៉ា</p>
+                                    <p class="mb-0" style="color: #C7A754;">វុឌ្ឍី</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="d-flex flex-column align-items-center text-center">
-                            <p class="text-xs mb-1 fw-medium" style="color: #C7A754;">កូនស្រីនាម</p>
-                            <div class="d-flex flex-column-reverse">
-                                <p class="mb-0 text-nowrap" style="color: #C7A754;">រ័ត្នវីរីយ៉ា</p>
-                                <p class="mb-0" style="color: #C7A754;">វុឌ្ឍី</p>
+
+                        <!-- Event Date -->
+                        <div class="text-center">
+                            <p class="text-uppercase fs-6 fw-medium mb-0" style="color: #C7A754;">
+                                ដែលនឹងប្រព្រឹត្តទៅនៅ
+                            </p>
+                            <div class="fw-semibold">
+                                <div class="text-center text-2xl text-uppercase"
+                                    style="font-size: 1.3rem; color: #C7A754;">
+                                    ថ្ងៃអាទិត្យ ទី២៨&ZeroWidthSpace; ខែមករា <br>
+                                    <span class="text-uppercase fs-2" style="color: #C7A754;">ឆ្នាំ២០២៤</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-
-                    <!-- Event Date -->
-                    <div class="text-center">
-                        <p class="text-uppercase fs-6 fw-medium mb-0" style="color: #C7A754;">
-                            ដែលនឹងប្រព្រឹត្តទៅនៅ
-                        </p>
-                        <div class="fw-semibold">
-                            <div class="text-center text-2xl text-uppercase" style="font-size: 1.5rem; color: #C7A754;">
-                                ថ្ងៃអាទិត្យ ទី២៨&ZeroWidthSpace; ខែមករា <br>
-                                <span class="text-uppercase fs-1" style="color: #C7A754;">ឆ្នាំ២០២៤</span>
-                            </div>
+                        <div class="position-absolute w-100  fw-bold d-flex justify-content-center arrow-icon"
+                            style="bottom: 2rem; font-size: 1rem; color: #C7A754; ">
+                            ទាញចុះក្រោម
+                            <svg class="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#C7A754"
+                                viewBox="0 0 24 24">
+                                <path d="M12 16.5l-8-8 1.4-1.4L12 13.7l6.6-6.6L20 8.5z" />
+                            </svg>
                         </div>
                     </div>
-                    <div class="position-absolute w-100  fw-bold d-flex justify-content-center arrow-icon"
-                        style="bottom: 2.5rem; font-size: 1rem; color: #C7A754; ">
-                        ទាញចុះក្រោម
-                        <svg class="" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#C7A754"
-                            viewBox="0 0 24 24">
-                            <path d="M12 16.5l-8-8 1.4-1.4L12 13.7l6.6-6.6L20 8.5z" />
-                        </svg>
-                    </div>
-
             </section>
             <section id="gallery1st" class="position-relative">
                 <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100"
