--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Khmer:wght@100..900&family=Noto+Serif+Khmer:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <script defer src="js/bootstrap.bundle.min.js"></script>
 
     <!-- Dynamic OG title using JavaScript -->
@@ -52,8 +53,9 @@
 <body>
     <!-- Background Audio -->
     <audio id="backgroundAudio" autoplay loop muted>
-        <source src="background_instrument.mp3" />
+        <source src="wedding_background_instrument.mp3" />
     </audio>
+
     <!-- Background Image -->
     <img src="images/background.png" alt="background"
         class="position-fixed top-0 start-0 w-100 h-100 object-fit-cover  d-lg-block"
@@ -77,8 +79,7 @@
             <!-- Open Button -->
             <div class="d-flex justify-content-center mt-3">
                 <button id="start-button"
-                    class="btn position-relative p-0 border-0 d-flex align-items-center justify-content-center animation_btn"
-                    style="width: 140px; height: 34px; overflow: hidden;">
+                    class="btn btn-01  position-relative p-0 border-0 d-flex align-items-center justify-content-center animation_btn">
                     <!-- Background image absolutely positioned -->
                     <img src="images/button.svg" alt="Calendar Icon" class="w-100 h-100 position-absolute top-0 start-0"
                         style="z-index: 1; object-fit: cover;">
@@ -99,6 +100,13 @@
     </div>
     <main id="scrollable-page" class="position-relative min-vh-100">
         <div class="d-flex flex-column w-100 min-vh-100">
+            <button id="audioToggle" class="d-flex align-items-center justify-content-center rounded-circle btn-audio"
+                data-bs-toggle="tooltip" data-bs-placement="left" title="Turn sound on/off">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640" fill="#C7A754" class="p-1">
+                    <path
+                        d="M80 416L128 416L262.1 535.2C268.5 540.9 276.7 544 285.2 544C304.4 544 320 528.4 320 509.2L320 130.8C320 111.6 304.4 96 285.2 96C276.7 96 268.5 99.1 262.1 104.8L128 224L80 224C53.5 224 32 245.5 32 272L32 368C32 394.5 53.5 416 80 416zM399 239C389.6 248.4 389.6 263.6 399 272.9L446 319.9L399 366.9C389.6 376.3 389.6 391.5 399 400.8C408.4 410.1 423.6 410.2 432.9 400.8L479.9 353.8L526.9 400.8C536.3 410.2 551.5 410.2 560.8 400.8C570.1 391.4 570.2 376.2 560.8 366.9L513.8 319.9L560.8 272.9C570.2 263.5 570.2 248.3 560.8 239C551.4 229.7 536.2 229.6 526.9 239L479.9 286L432.9 239C423.5 229.6 408.3 229.6 399 239z" />
+                </svg>
+            </button>
             <section id="home" class="position-relative slide-in">
                 <div class="d-flex flex-column w-100 min-h-screen-s">
                     <div class="d-flex flex-column min-h-screen-s justify-content-center align-items-center text-2xl"
@@ -159,7 +167,6 @@
             </section>
             <section id="gallery1st" class="position-relative slide-in">
                 <div class="d-flex flex-column w-100 h-100">
-
                     <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100"
                         style="max-width: 640px; color: #C7A754; margin-top: 100px;">
                         <!-- First Row: Single Large Image -->
@@ -208,7 +215,6 @@
                         <div class="text-center fw-semibold mb-4 pop-up-on-scroll" style="font-size: 1.5rem;">
                             មានកិត្តិយសសូមគោរពអញ្ជើញ
                         </div>
-
                         <!-- Invitation Message -->
                         <div class="text-center mx-auto mt-4 small pop-up-on-scroll" style="max-width: 640px;">
                             សូមគោរពអញ្ចើញ ឯកឧត្តម លោកជំទាវ លោក លោកស្រី អ្នកនាងកញ្ញា
@@ -216,16 +222,13 @@
                             និងជាភ្ញៀវកិត្តិយស ដើម្បីប្រសិទ្ធពរជ័យសិរិសួស្តីជ័យមង្គល
                             ក្នុងពិធីរៀបអាពាហ៍ពិពាហ៍កូនប្រុសកូនស្រីរបស់យើងខ្ញុំ
                         </div>
-
                         <!-- Logo and Names -->
                         <div class="position-relative fw-semibold mt-4 pop-up-on-scroll">
-
                             <!-- Logo -->
                             <div class="text-center">
                                 <img src="images/logo-1.svg" class="img-fluid mx-auto" style="max-width: 10rem;"
                                     loading="lazy" alt="Wedding Logo">
                             </div>
-
                             <!-- Groom & Bride Names -->
                             <div class="position-absolute start-50 translate-middle-x d-flex justify-content-between w-100 px-4"
                                 style="bottom: 1rem; max-width: 640px;">
@@ -247,24 +250,20 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Ceremony Time -->
                         <div class="text-center small mt-4 pop-up-on-scroll">
                             ដែលនឹងប្រព្រឹត្តទៅ ចាប់ពីម៉ោង ១៧:០០
                         </div>
-
                         <!-- Ceremony Date -->
                         <div class="fw-semibold text-center mt-3 text-uppercase pop-up-on-scroll"
                             style="font-size: 1.5rem;">
                             ថ្ងៃអាទិត្យ ទី២៨ ខែមករា<br>
                             <span style="font-size: 2rem;">ឆ្នាំ២០២៤</span>
                         </div>
-
                         <!-- Calendar Button -->
                         <div class="d-flex justify-content-center mt-3 pop-up-on-scroll">
                             <button
-                                class="btn position-relative p-0 border-0 d-flex align-items-center justify-content-center animation_btn"
-                                style="width: 140px; height: 34px; overflow: hidden;">
+                                class="btn  animation_btn btn-01 position-relative p-0 border-0 d-flex align-items-center justify-content-center animation_btn">
                                 <!-- Background image absolutely positioned -->
                                 <img src="images/button.svg" alt="Calendar Icon"
                                     class="w-100 h-100 position-absolute top-0 start-0"
@@ -452,33 +451,9 @@
                             <img loading="lazy" src="https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/map.svg"
                                 alt="Map" class="img-fluid" style="max-width: 300px; width: 70%; object-fit: contain;">
                         </div>
-
-                        <!-- Map Button -->
-                        <!-- 
-                            <div class="d-flex justify-content-center mt-4">
-                                <a target="_blank" href="https://maps.app.goo.gl/aXpKsD7kzqBAdYPJ9"
-                                    class="btn border border-primary rounded-pill px-4 py-2 text-primary"
-                                    style="transition: all 0.3s ease;"
-                                    onmouseover="this.classList.add('bg-primary','text-white')"
-                                    onmouseout="this.classList.remove('bg-primary','text-white')">
-                                    បើកផែនទី
-                                </a>
-                            </div>
-                                                        <div class="d-flex justify-content-center mt-3">
-                                <button class="btn position-relative p-0 border-0" style="width: 240px; height: 35px;">
-                                    <img src="images/button.svg" alt="Calendar Icon"
-                                        class="w-100 h-100 position-absolute top-0 start-0" style="z-index: 1;">
-                                    <span class="position-relative text-uppercase fw-bold"
-                                        style="z-index: 2; color: #C7A754; font-size: 0.875rem;">
-                                        បើកផែនទី
-                                    </span>
-                                </button>
-                            </div> 
-                            <button class="custom-btn">បើកផែនទី</button>
-                            -->
+                        <!-- Map button -->
                         <button
-                            class="btn position-relative p-0 mt-4 border-0 d-flex align-items-center justify-content-center "
-                            style="width: 140px; height: 34px; overflow: hidden;">
+                            class="btn btn-01 position-relative p-0 mt-4 border-0 d-flex align-items-center justify-content-center animation_btn ">
                             <!-- Background image absolutely positioned -->
                             <img src="images/button.svg" alt="Calendar Icon"
                                 class="w-100 h-100 position-absolute top-0 start-0"
@@ -493,22 +468,24 @@
                     </div>
                 </div>
             </section>
-            <section id="payment" class="position-relative slide-in">
+            <section id="wish" class="position-relative slide-in">
                 <div class="d-flex flex-column w-100 h-100">
                     <div class="d-flex flex-column justify-content-center align-items-center min-vh-100  ">
                         <div class="text-center fw-semibold " style="color: #C7A754; font-size: 1.5rem;">
-                            ចំណងដៃ
+                            ពាក្យជូនពរ
                         </div>
                         <div class="text-center" style="color: #C7A754; font-size: 1.25rem;  padding-bottom: 0.5rem;">
-                            សូមស្កេន QR ខាងក្រោម
+                            សូមផ្ញើជូននូវពរជ័យ និងពាក្យពេចន៍ល្អៗរបស់អ្នកសម្រាប់គូស្វាមីភរិយាថ្មីថ្មោង
                         </div>
                         <div class="mt-3 w-100 d-flex justify-content-center text-center">
-                            <form class="d-flex flex-column" action="https://formspree.io/f/xvgqkkev" method="POST">
-                                <label>
-                                    <textarea class="form-control" name="message"></textarea>
+                            <form class="d-flex flex-column" action="https://formspree.io/f/xvgqkkev" method="POST"
+                                style="width: 250px; height: 120px;">
+                                <label class="w-100 h-100">
+                                    <textarea class="form-control w-100 h-100" name="message"
+                                        style="    border: solid #C7A754; background: transparent;"></textarea>
                                 </label>
                                 <!-- your other form fields go here -->
-                                <button type="submit">Send</button>
+                                <button type="submit" class="custom-btn ">ផ្ញើរសារ</button>
                             </form>
                         </div>
                     </div>
