--- a/index.html
+++ b/index.html
@@ -49,13 +49,11 @@
     </script>
 </head>
 
-
 <body>
     <!-- Background Audio -->
     <audio id="backgroundAudio" autoplay loop muted>
         <source src="wedding_background_instrument.mp3" />
     </audio>
-
     <!-- Background Image -->
     <img src="images/background.png" alt="background"
         class="position-fixed top-0 start-0 w-100 h-100 object-fit-cover  d-lg-block"
@@ -114,16 +112,13 @@
                 <div class="d-flex flex-column w-100 min-h-screen-s">
                     <div class="d-flex flex-column min-h-screen-s justify-content-center align-items-center text-2xl"
                         style="opacity: 1;">
-
                         <!-- Title -->
                         <p class="fw-semibold fs-4 mb-0" style=" color: #C7A754;">សិរីមង្គលអាពាហ៍ពិពាហ៍</p>
-
                         <!-- Logo -->
                         <div class="z-3 mt-3">
                             <img alt="logo" loading="lazy" width="204" height="278" decoding="async"
                                 src="images/logo.svg" class="img-fluid">
                         </div>
-
                         <!-- Groom & Bride Names -->
                         <div class="d-flex justify-content-between align-items-center w-100 px-3 py-3 fw-semibold"
                             style="max-width: 300px; font-size: 1rem;">
@@ -144,7 +139,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Event Date -->
                         <div class="text-center">
                             <p class="text-uppercase fs-6 fw-medium mb-0" style="color: #C7A754;">
@@ -153,8 +147,8 @@
                             <div class="fw-semibold">
                                 <div class="text-center text-2xl text-uppercase"
                                     style="font-size: 1.3rem; color: #C7A754;">
-                                    ថ្ងៃអាទិត្យ ទី២៨&ZeroWidthSpace; ខែមករា <br>
-                                    <span class="text-uppercase fs-2" style="color: #C7A754;">ឆ្នាំ២០២៤</span>
+                                    ថ្ងៃសុក្រ ទី០៤&ZeroWidthSpace; ខែមេសា <br>
+                                    <span class="text-uppercase fs-2" style="color: #C7A754;">ឆ្នាំ២០២៥</span>
                                 </div>
                             </div>
                         </div>
@@ -206,12 +200,12 @@
                         <div class="d-flex justify-content-between fw-semibold mx-auto mt-4 mb-4 pop-up-on-scroll"
                             style="max-width: 640px; gap: 0.5rem;">
                             <div class=" text-start small">
-                                លោក កៅ វណ្ណារិន<br>
-                                លោកស្រី ស៊ុន ពិសី
+                                លោក សៅ សាក់<br>
+                                លោកស្រី សន ចិន្ដា
                             </div>
                             <div class=" text-end small">
-                                លោកវេជ្ជបណ្ឌិត យិន វុឌ្ឍី<br>
-                                លោកស្រី អេង រ័ត្នឆវី
+                                លោក សុខ ប៊ុនថុន<br>
+                                លោកស្រី សារិន សោភា
                             </div>
                         </div>
                         <!-- Title -->
@@ -260,8 +254,8 @@
                         <!-- Ceremony Date -->
                         <div class="fw-semibold text-center mt-3 text-uppercase pop-up-on-scroll"
                             style="font-size: 1.5rem;">
-                            ថ្ងៃអាទិត្យ ទី២៨ ខែមករា<br>
-                            <span style="font-size: 2rem;">ឆ្នាំ២០២៤</span>
+                            ថ្ងៃសុក្រ ទី០៤ ខែមេសា<br>
+                            <span style="font-size: 2rem;">ឆ្នាំ២០២៥</span>
                         </div>
                         <!-- Calendar Button -->
                         <div class="d-flex justify-content-center mt-3 pop-up-on-scroll">
@@ -439,24 +433,22 @@
                     <div class="d-flex flex-column justify-content-center align-items-center min-vh-100">
 
                         <!-- Title -->
-                        <div class="text-center fw-semibold mb-2" style="color: #C7A754; font-size: 1.5rem;">
+                        <div class="text-center fw-semibold " style="color: #C7A754; font-size: 1.5rem;">
                             ទីតាំង
                         </div>
 
                         <!-- Subtitle -->
-                        <div class="text-center"
-                            style="color: #C7A754; font-size: 1.25rem; padding-top: 0.5rem; padding-bottom: 0.5rem;">
-                            ភីអេច ហ្គ្រេនហល (បុរី ប៉េងហួត បឹងស្នោរ)
+                        <div class="text-center p-3" style="color: #C7A754; font-size: 1.25rem;">
+                            ភូមិព្រែកស្វាយ ឃុំឈើទាល ស្រុកកៀនស្វាយ ខេត្តកណ្ដាល
                         </div>
-
                         <!-- Map Image -->
-                        <div class="mt-5 w-100 text-center">
-                            <img loading="lazy" src="https://ik.imagekit.io/ananisai/assets/NicholasMarryViriya/map.svg"
-                                alt="Map" class="img-fluid" style="max-width: 300px; width: 70%; object-fit: contain;">
+                        <div class="mt-3 w-100 text-center">
+                            <img loading="lazy" src="images/map.svg" alt="Map" class="img-fluid"
+                                style="max-width: 330px;; object-fit: contain;">
                         </div>
                         <!-- Map button -->
-                        <button
-                            class="btn btn-01 position-relative p-0 mt-4 border-0 d-flex align-items-center justify-content-center animation_btn ">
+                        <a target="_blank" href="https://maps.app.goo.gl/LXDL4t21vvFHLXQMA"
+                            class="btn btn-01 position-relative p-0 mt-5 border-0 d-flex align-items-center justify-content-center animation_btn ">
                             <!-- Background image absolutely positioned -->
                             <img src="images/button.svg" alt="Calendar Icon"
                                 class="w-100 h-100 position-absolute top-0 start-0"
@@ -467,7 +459,7 @@
                                 style="padding-top: 4px; padding-bottom: 4px;line-height: 1.2;font-size: 0.9rem;color: #C7A754">
                                 បើកផែនទី
                             </span>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -477,7 +469,7 @@
                         <div class="text-center fw-semibold " style="color: #C7A754; font-size: 1.5rem;">
                             ពាក្យជូនពរ
                         </div>
-                        <div class="text-center" style="color: #C7A754; font-size: 1.25rem;  padding-bottom: 0.5rem;">
+                        <div class="text-center p-3" style="color: #C7A754; font-size: 1.25rem;">
                             សូមផ្ញើជូននូវពរជ័យ និងពាក្យពេចន៍ល្អៗរបស់អ្នកសម្រាប់គូស្វាមីភរិយាថ្មីថ្មោង
                         </div>
                         <div class="mt-3 w-100 d-flex justify-content-center text-center">
@@ -505,12 +497,12 @@
                         <p class="px-3 px-md-5" style="color: #C7A754;">
                             តើលោកអ្នកចាប់អារម្មណ៍នឹងប្រើប្រាស់សេវាកម្មរបស់ពួកយើងសម្រាប់កម្មវិធីរបស់លោកអ្នកដែរឬទេ?
                         </p>
-                        <p style="color: #C7A754;">ទាក់ទងមកកាន់ពួកយើងឥឡូវនេះ</p>
+                        <p class="m-0" style="color: #C7A754;">ទាក់ទងមកកាន់ពួកយើងឥឡូវនេះ</p>
                         <!-- Contact Info -->
-                        <div class="d-flex flex-column gap-2 mt-3" style="color: #C7A754;">
-                            <a href="tel:098456866" class="text-decoration-none text-reset">លេខទូរស័ព្ទ: 096 607
+                        <div class="d-flex flex-column gap-2" style="color: #C7A754;">
+                            <a href="tel:0966079486" class="text-decoration-none text-reset">លេខទូរស័ព្ទ: 096 607
                                 9486</a>
-                            <a href="mailto:ananisai.kh@gmail.com" class="text-decoration-none text-reset">អុីមែល:
+                            <a href="lengmr2112@gmail.com" class="text-decoration-none text-reset">អុីមែល:
                                 info.invitely@gmail.com</a>
                         </div>
                         <!-- Social Icons -->
@@ -525,7 +517,7 @@
                                 </svg>
                             </a>
                             <!-- Telegram -->
-                            <a href="https://t.me/" target="_blank"
+                            <a href="https://t.me/snnleng" target="_blank"
                                 class="d-flex flex-column align-items-center text-decoration-none">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#C7A754"
                                     viewBox="0 0 16 16">
