--- a/index copy.html
+++ b/index copy.html
@@ -82,9 +82,10 @@
     </header>
     <div id="popup-page"
         style="display: none; opacity: 0; justify-content: center; align-items: center; background: rgba(0,0,0,0.8); position: fixed; top:0; left:0; width:100%; height:100%;">
-        <video id="popup-video" width="600" autoplay muted>
+        <video id="popup-video" playsinline webkit-playsinline muted preload="auto"
+            style="max-width:100%; max-height:100%;">
             <source src="images/open_clip.mp4" type="video/mp4">
-            Your browser does not support the video tag.
+
         </video>
     </div>
     <button id="audioToggle" class="d-flex align-items-center justify-content-center rounded-circle btn-audio"
@@ -97,7 +98,7 @@
             </svg>
         </span>
     </button>
-    <main id="scrollable-page" class="position-relative min-vh-100 text-box">
+    <main id="scrollable-page" class="position-relative min-vh-100 text-box" style="display: none; opacity: 0;">
         <div class="d-flex flex-column w-100 min-vh-100 ">
             <section id="home" class="position-relative">
                 <div class="d-flex flex-column w-100 min-h-screen-s">
